Fix out of place logo for size large screens

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -111,11 +111,7 @@
 
 /* --------------------------------------------------------Bootstrap's extra-large breakpoint */
 @media (max-width: 1200px) {
-    #logo-brand {
-        width: 20vw;
-        top: calc(-50% - 10vw);
-    }
-
+    
     #qty-selector {
         display: block;
     }
